打包及相关配置